--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-fileupload": "^0.1.4",
+    "jimp": "^0.2.28",
     "nunjucks": "^3.0.1",
     "request": "^2.81.0"
   }
